[gd_scene load_steps=2 format=3 uid="uid://4xbt1skqi7r6"]

[ext_resource type="Script" path="res://scripts/menu_pause.gd" id="1_734ct"]

[node name="menu_pausa" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_734ct")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.360784, 0.839216, 0.219608)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.411765, 0.415686, 0.686275)
metadata/_edit_lock_ = true

[node name="ButtonReanudar" type="Button" parent="ColorRect/ColorRect2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -15.5
offset_right = 125.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Reanudar Juego"
metadata/_edit_lock_ = true

[node name="ButtonMenu" type="Button" parent="ColorRect/ColorRect2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.567
anchor_right = 0.5
anchor_bottom = 0.567
offset_left = -125.0
offset_top = 17.95
offset_right = 125.0
offset_bottom = 48.95
grow_horizontal = 2
grow_vertical = 2
text = "Menu Principal"
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/ColorRect2"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 19.0
offset_right = 76.0
offset_bottom = 59.0
grow_horizontal = 2
text = "Menu de Pausa"
metadata/_edit_lock_ = true

[connection signal="pressed" from="ColorRect/ColorRect2/ButtonReanudar" to="." method="_on_button_reanudar_pressed"]
[connection signal="pressed" from="ColorRect/ColorRect2/ButtonMenu" to="." method="_on_button_menu_pressed"]
